--- a/src/components/monitor.module.css
+++ b/src/components/monitor.module.css
@@ -1,25 +1,27 @@
 .gmonitor {
-    border: 3px solid purple;
+    border: 5px solid rgb(116, 218, 33);
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 150px;
-    background-color: black;
+    width: 300px;
+    /*background-color: black;*/
     font-size: 70px;
     color: greenyellow;
     margin: 0px 0px 7px 0px;
 }
 
 .rmonitor {
-    border: 3px solid purple;
+    border: 5px solid red;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 150px;
-    background-color: black;
-    font-size: 80px;
+    width: 300px;
+    /*background-color: black;*/
+    font-size: 70px;
     color: red;
     margin: 0px 0px 7px 0px;
 }
