add style to div id=root

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   padding: 10% 0px 0px 0px;
   /*height: 500px;*/
-  display: flex;
-  flex-direction: column;
   background: linear-gradient(90deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
 
   margin: 0;
@@ -16,4 +14,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
+}
+
+.div {
+  display: flex;
 }
