--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
-/*.App {display: flex;*/
-/*justify-content: center;*/
-/*align-items: center;*/
-/*}*/
+.App {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
