--- a/src/components/setсounter.module.css
+++ b/src/components/setсounter.module.css
@@ -4,7 +4,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 150px;
+    width: 300px;
+    /*background-color: black;*/
+    font-size: 70px;
+    color: greenyellow;
+    margin: 0px 0px 7px 0px;
+}
+.button {
+    border: 5px solid rgb(116, 218, 33);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
     width: 300px;
     /*background-color: black;*/
     font-size: 70px;
