--- a/src/components/сounter.module.css
+++ b/src/components/сounter.module.css
@@ -19,10 +19,10 @@
     /*background-color: black;*/
     /*margin: 0px 0px 7px 0px;*/
 }
-.buts {
-    margin: 13px;
-    width: 130px;
-    height: 100px;
-    border: 5px solid rgb(116, 218, 33);
-    border-radius: 10px;
-}
+/*.buts {*/
+/*    margin: 13px;*/
+/*    width: 130px;*/
+/*    height: 100px;*/
+    /*border: 5px solid rgb(116, 218, 33);*/
+    /*border-radius: 10px;*/
+/*}*/
