--- a/src/components/setсounter.module.css
+++ b/src/components/setсounter.module.css
@@ -10,6 +10,7 @@
     font-size: 70px;
     color: greenyellow;
     margin: 0px 0px 7px 0px;
+
 }
 .button {
     border: 5px solid rgb(116, 218, 33);
@@ -25,9 +26,6 @@
     margin: 0px 0px 7px 0px;
 }
 
-.butmon:active {
-    box-shadow: 3px 3px 30px 0 plum;
-}
 
 .counter {
     display: flex;
@@ -50,17 +48,15 @@
     /*background-color: black;*/
     /*margin: 0px 0px 7px 0px;*/
 }
-.buts {
-    margin: 13px;
-    width: 130px;
-    height: 100px;
-    border: 5px solid rgb(116, 218, 33);
-    border-radius: 10px;
-}
+/*.buts {*/
+/*    margin: 13px;*/
+/*    width: 130px;*/
+/*    height: 100px;*/
+/*    border: 5px solid rgb(116, 218, 33);*/
+/*    border-radius: 10px;*/
+/*}*/
 .inputs {
-    margin: 13px;
-    width: 130px;
-    height: 100px;
+    height: 90px;
     border: 5px solid rgb(116, 218, 33);
     border-radius: 10px;
     text-align: center;
@@ -73,6 +69,8 @@
     считают, что необходимо оставлять стрелочный вид для кнопок */
     cursor: pointer;
     font-size: 40px;
+    margin: 10px;
+    width: 130px;
 }
 
 .inputs:focus {
