--- a/src/components/button.module.css
+++ b/src/components/button.module.css
@@ -1,6 +1,5 @@
 
 .button {
-    border: none;
     font: inherit;
     color: greenyellow;
     background-color: transparent;
@@ -8,12 +7,14 @@
     считают, что необходимо оставлять стрелочный вид для кнопок */
     cursor: pointer;
     font-size: 40px;
+    border: 5px solid rgb(116, 218, 33);
+    border-radius: 10px;
+    margin: 10px;
+    width: 140px;
     height: 100px;
-    width: 100%;
 }
 
 .disbutton {
-    border: none;
     font: inherit;
     color: red;
     background-color: transparent;
@@ -21,7 +22,17 @@
     считают, что необходимо оставлять стрелочный вид для кнопок */
     cursor: pointer;
     font-size: 40px;
+    border: 5px solid red;
+    border-radius: 10px;
+    margin: 10px;
+    width: 140px;
     height: 100px;
-    width: 100%;
 }
 
+.button:active {
+    box-shadow: 3px 3px 50px 0 plum;
+}
+
+.disbutton:active {
+    box-shadow: 1px 1px 50px 0 red;
+}
