--- a/src/components/setсounter.module.css
+++ b/src/components/setсounter.module.css
@@ -1,3 +1,11 @@
+.divmain {
+    display: flex;
+    flex-direction: column;
+    min-height: 300px;
+    min-width: 250px;
+    align-items: center;
+}
+
 .butmon {
     border: 5px solid rgb(116, 218, 33);
     border-radius: 10px;
@@ -12,26 +20,12 @@
     margin: 0px 0px 7px 0px;
 
 }
-.button {
-    border: 5px solid rgb(116, 218, 33);
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 150px;
-    width: 300px;
-    /*background-color: black;*/
-    font-size: 70px;
-    color: greenyellow;
-    margin: 0px 0px 7px 0px;
-}
-
 
 .counter {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*width: 300px;*/
+    width: 300px;
     /*border: 5px solid purple;*/
     /*border-radius: 10px;*/
     /*display: flex;*/
@@ -43,8 +37,6 @@
     align-items: center;
     flex-direction: row;
     /*border-radius: 10px;*/
-    /*height: 150px;*/
-
     /*background-color: black;*/
     /*margin: 0px 0px 7px 0px;*/
 }
@@ -56,7 +48,7 @@
 /*    border-radius: 10px;*/
 /*}*/
 .inputs {
-    height: 90px;
+    height: 40px;
     border: 5px solid rgb(116, 218, 33);
     border-radius: 10px;
     text-align: center;
@@ -69,13 +61,18 @@
     считают, что необходимо оставлять стрелочный вид для кнопок */
     cursor: pointer;
     font-size: 40px;
-    margin: 10px;
+    margin: 5px;
     width: 130px;
 }
 
 .inputs:focus {
         box-shadow: 3px 3px 50px 0 plum;
     }
-
-
-
+.incont {
+    display: flex;
+    flex-direction: column;
+    color: greenyellow;
+    font-size: medium;
+    text-align: center;
+    min-width:50px;
+}
