--- a/src/components/сounter.module.css
+++ b/src/components/сounter.module.css
@@ -26,3 +26,10 @@
     /*border: 5px solid rgb(116, 218, 33);*/
     /*border-radius: 10px;*/
 /*}*/
+.divmain {
+    display: flex;
+    flex-direction: column;
+    min-height: 300px;
+    min-width: 250px;
+    align-items: center;
+}
