--- a/src/components/button.module.css
+++ b/src/components/button.module.css
@@ -9,9 +9,8 @@
     font-size: 40px;
     border: 5px solid rgb(116, 218, 33);
     border-radius: 10px;
-    margin: 10px;
-    width: 140px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
 }
 
 .disbutton {
@@ -24,9 +23,8 @@
     font-size: 40px;
     border: 5px solid red;
     border-radius: 10px;
-    margin: 10px;
-    width: 140px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
 }
 
 .button:active {
