--- a/src/components/setсounter.module.css
+++ b/src/components/setсounter.module.css
@@ -4,6 +4,8 @@
     min-height: 300px;
     min-width: 250px;
     align-items: center;
+    justify-content: center;
+    margin-right: 10px;
 }
 
 .butmon {
@@ -18,18 +20,8 @@
     font-size: 70px;
     color: greenyellow;
     margin: 0px 0px 7px 0px;
-
 }
 
-.counter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    /*border: 5px solid purple;*/
-    /*border-radius: 10px;*/
-    /*display: flex;*/
-}
 
 .but {
     display: flex;
@@ -40,13 +32,9 @@
     /*background-color: black;*/
     /*margin: 0px 0px 7px 0px;*/
 }
-/*.buts {*/
-/*    margin: 13px;*/
-/*    width: 130px;*/
-/*    height: 100px;*/
-/*    border: 5px solid rgb(116, 218, 33);*/
-/*    border-radius: 10px;*/
-/*}*/
+
+
+
 .inputs {
     height: 40px;
     border: 5px solid rgb(116, 218, 33);
@@ -66,13 +54,14 @@
 }
 
 .inputs:focus {
-        box-shadow: 3px 3px 50px 0 plum;
-    }
+    box-shadow: 3px 3px 50px 0 plum;
+}
+
 .incont {
     display: flex;
     flex-direction: column;
     color: greenyellow;
     font-size: medium;
     text-align: center;
-    min-width:50px;
+    min-width: 50px;
 }
