--- a/src/components/сounter.module.css
+++ b/src/components/сounter.module.css
@@ -1,7 +1,15 @@
+.divmain {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 280px ;
+}
 .counter {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 60%;
     /*width: 300px;*/
     /*border: 5px solid purple;*/
     /*border-radius: 10px;*/
@@ -10,26 +18,21 @@
 
 .but {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
+    justify-content: space-between;
+    /*flex-direction: row;*/
+    width: 100%;
+    height: 35%;
     /*border-radius: 10px;*/
-    /*height: 150px;*/
-
     /*background-color: black;*/
     /*margin: 0px 0px 7px 0px;*/
 }
-/*.buts {*/
-/*    margin: 13px;*/
-/*    width: 130px;*/
-/*    height: 100px;*/
-    /*border: 5px solid rgb(116, 218, 33);*/
-    /*border-radius: 10px;*/
-/*}*/
-.divmain {
+.buts {
     display: flex;
-    flex-direction: column;
-    min-height: 300px;
-    min-width: 250px;
+    justify-content: center;
     align-items: center;
+    flex-direction: row;
+    width: 48%;
+    height: 100%;
+    /*margin: 0px 5px;*/
 }
+
