--- a/src/components/setсounter.module.css
+++ b/src/components/setсounter.module.css
@@ -1,11 +1,10 @@
 .divmain {
     display: flex;
     flex-direction: column;
-    min-height: 300px;
-    min-width: 250px;
     align-items: center;
-    justify-content: center;
-    margin-right: 10px;
+    justify-content: space-between;
+    height: 280px;
+    margin: 0px 10px;
 }
 
 .butmon {
@@ -25,31 +24,25 @@
 
 .but {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    /*border-radius: 10px;*/
-    /*background-color: black;*/
-    /*margin: 0px 0px 7px 0px;*/
+    justify-content: space-between;
+    /*flex-direction: row;*/
+    width: 100%;
+    height: 35%;
 }
 
 
 
 .inputs {
-    height: 40px;
+    display: flex;
     border: 5px solid rgb(116, 218, 33);
     border-radius: 10px;
     text-align: center;
-    /*font-size: 50px;*/
-
-    /*font: inherit;*/
     color: greenyellow;
     background-color: transparent;
     /* отображаем курсор в виде руки при наведении; некоторые
     считают, что необходимо оставлять стрелочный вид для кнопок */
     cursor: pointer;
     font-size: 40px;
-    margin: 5px;
     width: 130px;
 }
 
@@ -60,8 +53,12 @@
 .incont {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     color: greenyellow;
-    font-size: medium;
     text-align: center;
-    min-width: 50px;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    font-size: 25px;
 }
+
