--- a/src/components/setсounter.module.css
+++ b/src/components/setсounter.module.css
@@ -8,7 +8,7 @@
 }
 
 .butmon {
-    border: 5px solid rgb(116, 218, 33);
+    /*border: 5px solid rgb(116, 218, 33);*/
     border-radius: 10px;
     display: flex;
     justify-content: center;
