--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  padding: 10% 0px 0px 0px;
+  padding: 10% 0% 0% 0%;
   /*height: 500px;*/
   background: linear-gradient(90deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
 
